@@ -1,3 +1,9 @@
+Thu Jun 20 08:09:29 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* tool/gcbench.rb: Summary in one line.
+
+	* common.mk: separete gcbench-hash to gcbench-hash1 and gcbench-hash2.
+
 Thu Jun 20 08:07:23 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (BIGSIZE): New macro.
